fix: Fix SOAP messages processing, add Unit tests. Also: clover plugin is removed, testng usage is replaced to junit-jupiter + mockito.